GloablServices/keshavglobal/force-app/main/default/objects/Case_Action_Result__c/Case_Action_Result__c.object-meta.xml
<CustomObject>
    <label>Case Action Result</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Action Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Action Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>