GloablServices/keshavglobal/force-app/main/default/objects/Case_Action_Result__c/fields/Communicated_With__c.field-meta.xml
<CustomField>
    <fullName>Communicated_With__c</fullName>
    <label>Communicated With</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requestor</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Illumifin AM</fullName>
            </value>
            <value>
                <fullName>Field Nurse</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>POA/Conservator</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>Interpreter Service Provider</fullName>
            </value>
            <value>
                <fullName>Assigned Interpreter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>