GloablServices/keshavglobal/force-app/main/default/objects/Case_Action_Result__c/fields/Intake_Request__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request__c</fullName>
    <label>Intake Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Action Results</relationshipLabel>
    <relationshipName>Case_Action_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>