GloablServices/keshavglobal/force-app/main/default/objects/Case_Action_Result__c/fields/Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Internal_Note__c</fullName>
    <label>Internal Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>