GloablServices/keshavglobal/force-app/main/default/objects/Case_Action_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intake_Request__c</columns>
    <columns>Action__c</columns>
    <columns>Customer_Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>